# testings

./: .gitattributes  .gitignore
c/: .gitignore  buffer_align.c  ceil_div.c  const_pointer.c  dbg.h  fscanf.c  printf_fork.c  printf_fork_printf.c
c/hello-cross/: .gitattributes  Makefile  main-hello.c
c/signal_thrd/: dbg.h  macro.h  sig.c  sig.h  signal_thrd.c  trace.h
cmake/hello/: CMakeLists.txt  main.cpp
cmake/hello/scripts/: gitversion.cmake  gitversion.h.in
cpp/: .gitignore  vector_move.cpp
cpp/boost/program_options/: Makefile  boost-main.cpp  git.sh
cpp/other/: class_operator.cpp  class_ops.cpp  class_pure_virtual.cpp  class_rvalue.cpp  class_try_catch.cpp  class_using.cpp  constexpr.cpp  function_pointer.cpp  function_template.cpp  non_virtual_interface.cpp  reference_addr.cpp  std_forward_vs_move.cpp  std_pair_ostream_overload.cpp  string_move.cpp  unique_ptr.cpp  vector_move.cpp  virtual.cpp
git/: .gitattributes  .gitignore
git/subst/: git.sh  sample.txt
gnuplot/plot_binary/: .gitattributes  plot_bin.plt
imx8mm/uuu/: .gitignore  nfs.uuu  uboot.uuu
linux/cgroups/: stress.sh
linux/kernel/dt/: Makefile  notes.txt  test.dts  test.dtsi
linux/kernel/dtmod/: Makefile  dtmod-main.c
linux/kernel/gpioirq/: Makefile  gpioirq-main.c  gpioirq.txt  rules.mk
linux/kernel/gpioirq/dts/: Makefile  imx8mm-evk-gpioirq.dts
linux/kernel/gpioirq/dts/include/: imx8mm-evk-disabled.dts
linux/kernel/platform/: Makefile  kpath.mk  rules.mk  testmod-main.c
linux/kernel/platform/dts/: Makefile  imx8mm-evk-testmod.dts
linux/kernel/platform/dts/include/: imx8mm-evk-disabled.dts
linux/kernel/regulator/: kdbg.h  regulator-main.c  regulator.txt
linux/kernel/regulator/dts/: Makefile  imx8mm-evk-regulator.dts
linux/kernel/regulator/dts/include/: imx8mm-evk-disabled.dts
linux/kernel/slave-spi-driver/: .gitattributes  Makefile  kdbg.h  macro.h  mx51_ecspi_regs.h  spi-slave-hw.c  spi-slave-hw.h  spi-slave-main.c  spi-slave.h
linux/kernel/testmod/: Makefile  kdbg.h  testmod-main.c
linux/scripts/: 7zdp.sh  lcus.sh  psw-unlock.sh  query_task_sched.sh  replace_in_substring.sh  spaces2tabs.sh  sudo_env.sh  sudo_restart.sh
linux/scripts/openvpn/: make_client.sh  template.ovpn
linux/scripts/udp/: udp_stat.sh  udp_stat_diff.sh
linux/scripts/usb/: usbdev-filter.sh
linux/scripts/wg/: wgconf.sh
linux/scripts/yacfg/: .gitignore  _yadir.txt  cfg.tmpl  config.tmpl  genconf.sh  include.txt  yaconf.sh
linux/scripts/yacfg/aliases/: ya_disk.sh  ya_fs.sh
make/realpath/: Makefile
md/: md2rtf.sh  notes.md  reference.rtf  reference_techdoc.docx  replace-meta.lua  sample.md  sample.rtf  template.html
md/samples/: .gitignore  sample.md
openwrt/kernel/gpio_single/: mygpio_single.c
openwrt/kernel/gpt/: kfifo.c  kfifo_rxtx.c  mygpio_full.c  mygpio_single.c  pdrv_gpio_sysfs.c  pdrv_sysfs.c  simple_pdrv.c  simple_pdrv_cdev.c  simple_pdrv_cdev_full.c
openwrt/kernel/kmod/: Makefile  kmod-main.c  kpath.mk  rules.mk
openwrt/kernel/pdev/: pdev-main.c
openwrt/kernel/pdrv_sysfs/: kpath.mk
openwrt/kernel/soft_uart/bitbang/: Makefile  bitbang-main.c  bitbang-proc.c  bitbang-sysfs.c  bitbang.h  kdbg.h  uart.c  uart.h
openwrt/kernel/soft_uart/bitbang/_vscode/: c_cpp_properties.json  settings.json  tasks.json
openwrt/kernel/soft_uart/dummy_uart/: dummy_uart-main.c  kdbg.h
openwrt/kernel/soft_uart/gpt/: gpio_uart_tty.c  gpio_uart_tty_gpiod.c  mini_uart.c  softuart_tty-main.c  softuart_tty.c  tty_loopback.c  tx_ring.c
openwrt/kernel/soft_uart/softuart_tty/: Makefile  softuart_tty-main.c
openwrt/kernel/soft_uart/softuart_tty/mk/: git.mk
python/: bytes_inc.py  gst_gl_window.py  permutations.py  ts_extract.py  yaspeedtest.py
python/udp_send/: udp2ports_alisa.py  udp_dual_sender.py
python/udp_xor_proxy/: udp_xor_proxy.c  udp_xor_proxy.py  udp_xor_proxy_multi.c  udp_xor_proxy_multi_cleanup.c
qt/EnumMapTemplateTest/: Cam.cpp  Cam.h  main.cpp
qt/EnumMapTest/: CMakeLists.txt  CamCommands.h  main.cpp
qt/EnumMapTest/cmake/: clean.cmake
qt/cmake/cmake-qt-openwrt/: .gitignore  main.cpp
qt/cmake/cmake-qt-openwrt/include/: macro.h
qt/cmake/gui-imx/: CMakeLists.txt  WinString.h  main.cpp  mainwindow.cpp  mainwindow.ui
qt/cmake/gui-imx/notes/: QtCreator.txt  environment.txt
qt/cmake/imx-qwt-sysinfo/: CMakeLists.txt
qt/cmake/imx-qwt-sysinfo/cmake/: install.cmake  qwt.cmake
qt/cmake/qsound/: CMakeLists.txt  MediaPlayer.h  main.cpp
qt/cmake/tst/: CMakeLists.txt  main.cpp
qt/cmake/tst/scripts/: distclean.cmake  git.sh  gitversion.cmake
qt/inistream/: CMakeLists.txt  IniStreamConfig.cpp  IniStreamConfig.h  main.cpp
qt/inistream/cmake/: distclean.cmake
qt/qaudiocap/: AudioCapture.cpp  AudioCapture.h  InputQAudioSource.cpp  InputQAudioSource.h  main.cpp
qt/qaudiocap/cmake/: gitversion.cmake
qt/qinputwin/: .gitattributes  .gitignore  CMakeLists.txt  Dialog.cpp  Dialog.h  Dialog.ui  EventLogger.cpp  EventLogger.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
qt/qkeywin/: CMakeLists.txt  KbdWidget.cpp  KbdWidget.h  KbdWidget.ui  KeyDialog.cpp  KeyDialog.h  KeyDialog.ui  KeysManager.cpp  KeysManager.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  icons.qrc  macro.h  main.cpp
qt/qkeywin/cmake/: gitversion.cmake  gitversion.h.in  install.cmake
qt/qsound/: CMakeLists.txt  MediaPlayer.cpp  MediaPlayer.h  PlayQAudioSink.cpp  PlayQAudioSink.h  PlayWav.cpp  PlayWav.h  build.sh  main.cpp
qt/qsound/cmake/: clean.cmake  gitversion.h.in  install.cmake  suffix.cmake
qt/slots/: CMakeLists.txt  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h  Structs.h  main.cpp
qt/vkbd/VkbdProxyPlugin/: CMakeLists.txt  VkbdInputContext.cpp  VkbdInputContext.h  VkbdPlugin.cpp  VkbdPlugin.h  VkbdProxyPlugin.json  WidgetKey.cpp  WidgetKey.h  WidgetKey.ui
qt/vkbd/VkbdProxyPlugin/cmake/: install.cmake
video/: h264cabac.py  h264nal.py
video/ffmpeg/: ff2h264.sh  ff2ts.sh  ff_extract.sh  ff_tspack.sh
web/ag_clicker/: w9KkfDrc-delayed.txt  w9KkfDrc.txt
web/ag_clicker/orig/: 4770.txt  delay.diff  manual.txt
